<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#0273BC"
    tools:context="com.example.bipl.mpay.LoginActivity">

    <LinearLayout
        android:layout_marginTop="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginLeft="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:id="@+id/layoutHeader">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="end"
            android:layout_weight=".1">
        <ImageView
            android:layout_marginTop="5dp"
            android:layout_width="30dp"
            android:layout_marginRight="10dp"
            android:layout_height="30dp"
            android:src="@drawable/powerred"
            android:id="@+id/imageViewPower"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:layout_weight=".3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mpay_logo"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/layoutHeader"
        android:background="@drawable/background">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".001">

            <TextView
                android:layout_marginTop="20sp"
                android:text="@string/merchant_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center_horizontal|center_vertical"
                android:id="@+id/textViewTitle" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".001"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textColor">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textColor="@color/textColor"
                    android:singleLine="true"
                    android:inputType="textCapCharacters"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:id="@+id/edittextUsername"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".001"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textColor">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:id="@+id/edittextPassword"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".001"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <Button
                android:text="@string/login"
                android:layout_below="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:textColor="@color/textColor"
                android:background="@drawable/button_border"
                android:id="@+id/buttonLogin" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".001"
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical">

            <TextView
                android:text="Forgot Password?"
                android:gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewForgot" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
