<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0273BC"
    tools:context="com.example.bipl.mpay.AccountActivity">
    <RelativeLayout
        android:layout_marginTop="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginLeft="15sp"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:background="@android:color/white"
        android:id="@+id/layoutHeader">
        <ImageView
            android:layout_marginLeft="520dp"
            android:layout_marginTop="10dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/powerred"
            android:id="@+id/imageViewPower"/>
        <ImageView
            android:layout_marginTop="50sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/mpay_logo"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layoutHeader"
        android:background="@drawable/background">
    <TableLayout
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18sp"
        android:layout_marginRight="18sp"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:text="Please Verify Account Details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center_horizontal|center_vertical"
                android:id="@+id/textViewTitle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="18sp"
            android:layout_marginRight="18sp">

            <TextView
                android:layout_width="550sp"
                android:layout_height="wrap_content"
                android:text="Account Name"
                android:textSize="22sp"
                android:shadowColor="@color/colorAccent"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="30"
                android:textColor="#000"
                android:id="@+id/textViewaccName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:layout_marginLeft="18sp"
            android:layout_marginRight="18sp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Account Name"
                android:singleLine="true"
                android:focusable="false"
                android:textSize="24sp"
                android:textColor="@color/textColor"
                android:id="@+id/editTextaccName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="18sp"
            android:layout_marginRight="18sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Account Number"
                android:textColor="#000"
                android:textSize="22sp"
                android:id="@+id/textViewaccNum" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:layout_marginLeft="18sp"
            android:layout_marginRight="18sp">


            <EditText
                android:layout_width="550sp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="Account Number"
                android:singleLine="true"
                android:focusable="false"
                android:textSize="24sp"
                android:textColor="@color/textColor"
                android:id="@+id/editTextaccNum" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:layout_marginLeft="18sp"
            android:layout_marginRight="18sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Points"
                android:textSize="22sp"
                android:layout_weight="1"
                android:textColor="#000"
                android:id="@+id/textViewaccPoints" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Point Worth"
                android:textSize="22sp"
                android:layout_weight="1"
                android:textColor="#000"
                android:id="@+id/textViewaccpointWorth" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:layout_marginLeft="18sp"
            android:layout_marginRight="18sp">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:text="Points"
                android:singleLine="true"
                android:textSize="24sp"
                android:focusable="false"
                android:layout_gravity="left"
                android:textColor="@color/textColor"
                android:id="@+id/editTextpoints" />


                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:textSize="24sp"
                    android:text="Points Worth"
                    android:singleLine="true"
                    android:gravity="left"
                    android:focusable="false"
                    android:textColor="@color/textColor"
                    android:id="@+id/editTextpointsWorth" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="25sp"
            android:layout_marginLeft="18sp"
            android:layout_marginRight="18sp">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                android:id="@+id/radioGroup">


                <RadioButton
                    android:textColor="@color/textColor"
                    android:text="@string/loyality"
                    android:textSize="22sp"
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioLoyalty"
                    android:background="@drawable/button_border" />

                <RadioButton
                    android:textColor="@color/textColor"
                    android:layout_marginLeft="20sp"
                    android:text="@string/account"
                    android:textSize="22sp"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/button_border"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioAccount" />

            </RadioGroup>

        </TableRow>

    </TableLayout>
        <Button
            android:layout_marginTop="24sp"
            android:text="@string/cancel_transaction"
            android:textColor="@color/textColor"
            android:textSize="22sp"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCancel"
            android:layout_below="@id/tableLayout"
            android:background="@drawable/button_border"/>
    </RelativeLayout>
</RelativeLayout>
